--- a/mcdanfood-api/src/main/resources/application.properties
+++ b/mcdanfood-api/src/main/resources/application.properties
@@ -5,7 +5,11 @@ spring.datasource.password=admin
 notificador.email.porta-servidor=28
 
 
-spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.generate-ddl=true
+#spring.jpa.hibernate.ddl-auto=create
+
+server.port = 8090
+spring.flyway.locations=classpath:db/migration,classpath:db/testdata
+
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
