--- a/mcdanfood-api/src/main/resources/application.properties
+++ b/mcdanfood-api/src/main/resources/application.properties
@@ -8,8 +8,11 @@ notificador.email.porta-servidor=28
 #spring.jpa.generate-ddl=true
 #spring.jpa.hibernate.ddl-auto=create
 
-server.port = 8090
+server.port = 8080
 spring.flyway.locations=classpath:db/migration,classpath:db/testdata
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
+
+spring.jackson.deserialization.fail-on-unknown-properties=true
+spring.jackson.deserialization.fail-on-ignored-properties=true
